tests/NormalTests/paczka1/fuzzy1/66388497.err
Error in line 7: mwFzf S808 3,2
Error in line 6: HildMC5S1v A105 67,0
Error in line 22: HildMC5S1v S808 42,4
Error in line 24: hPMz S695 13,3
Error in line 15: S854 S854 60,4
Error in line 38: HildMC5S1v A105 33,9
